2012-07-06 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Core.java: Service will only start if options were configured.
	* src/pandroid_event_viewer/pandorafms/API.java: Removed a //TODO comment.
	* src/pandroid_event_viewer/pandorafms/Options.java: A "configured" value is saved in preferences as true if options were configured.
	* src/pandroid_event_viewer/pandorafms/EventList.java: Removed group images.
	* res/layout/options.xml: Little UI changes.

2012-07-05 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/OnBootLoader.java: New BroadcastReceiver which starts the search new events service after the phone boot.
	* src/pandroid_event_viewer/pandorafms/Core.java: Little changes.
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java: On process_notification it doesn't retrieve count_events anymore.
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerService.java: Now the launched notification has the correct number of new events.
	* res/values/strings.xml: Added new entries.
	* res/values-en/*: Deleted, unnecessary files.
	* AndroidManifest.xml: Added the new BroadcastReceiver
	
2012-07-03 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/IncidentListItem.java: Deleted, not necessary class.
	* src/pandroid_event_viewer/pandorafms/IncidentList.java: Deleted, not necessary class.	
	* src/pandroid_event_viewer/pandorafms/EventList.java: The event type images are now fetched from the application (not internet).
	* src/pandroid_event_viewer/pandorafms/Core.java: Added a method which returns the event type image.
	* res/res/drawable-ldpi/: Added some images.

2012-06-30 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Main.java: Added a check in order to prevent profile overwritings.
	* src/pandroid_event_viewer/pandorafms/Core.java: Added method which finds a string in a list (case insensitive). 
